--- a/scss/_normarize.scss
+++ b/scss/_normarize.scss
@@ -11,12 +11,13 @@
 html {
   font-size: 16px;
 
-  @media (max-width: $breakpointSm - 0.1px) {
-    font-size: 3.84vw;
+  @media (max-width: $breakpoint - 0.1px) {
+    font-size: 1.6vw;
   }
 }
  
 body {
+  min-width: 60rem;
   margin: 0; // Remove the margin in all browsers
   background-color: $bodyBg;
   color: $bodyColor;
