--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,6 +5,4 @@ $bodyColor:          #333333;
 $primaryColor:       #1b2a44;
 $primaryLightColor:  lighten($primaryColor, 50%);
 
-$breakpointSm:       600px;
-$breakpointMd:       900px;
-$breakpointLg:       1200px;
+$breakpoint:         1000px;
